--- a/_includes/testimonial_cta.html
+++ b/_includes/testimonial_cta.html
@@ -4,13 +4,18 @@
       <div class="testimonial-col">
         <blockquote>
           <p class="testimonial-quote">
-            You'd be hard pressed to find a greater assemblage of digital talent.
+            You’d be hard pressed to find a greater assemblage of digital
+            talent.
           </p>
 
           <cite class="testimonial-cite">
             <span class="testimonial-author">Luke McCormack</span>
-            <span class="testimonial-position">Former Chief Information Officer</span>
-            <span class="testimonial-org"><strong>Department of Homeland Security</strong></span>
+            <span class="testimonial-position"
+              >Former Chief Information Officer</span
+            >
+            <span class="testimonial-org"
+              ><strong>Department of Homeland Security</strong></span
+            >
           </cite>
         </blockquote>
       </div>
