--- a/_sass/layout/_cta.scss
+++ b/_sass/layout/_cta.scss
@@ -79,25 +79,24 @@
 }
 
 .testimonial-quote {
-  @extend %font-italic;
   @extend %mb-4;
   font-size: $font-size-x-large;
   line-height: 1.25;
 
   &::before {
     @extend %align-middle;
-    content: '\201C';
+    content: "\201C";
     font-size: $font-size-xxx-large;
-    line-height: .1;
-    opacity: .5;
+    line-height: 0.1;
+    opacity: 0.5;
   }
 
   &::after {
     @extend %align-middle;
-    content: '\201D';
+    content: "\201D";
     font-size: $font-size-xxx-large;
-    line-height: .1;
-    opacity: .5;
+    line-height: 0.1;
+    opacity: 0.5;
   }
 
   @include media-breakpoint-up(md) {
@@ -131,5 +130,5 @@
 }
 
 .testimonial-author::before {
-  content: '— ';
+  content: "— ";
 }
