--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -39,9 +39,12 @@
   background-color: $gray-light;
 }
 
-
 .bg-gray-light {
   background-color: $brand-gray-light;
+}
+
+.bg-ochre-lightest {
+  background-color: $ochre-20;
 }
 
 .text-ink {
