--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,14 @@
       {% else %}
         <a class="navbar-logo" href="/">Skylight</a>
       {% endif %}
-      <div class="navbar-toggler" role="button" data-toggle="collapse" data-target="#navbar-nav-collapsible" aria-controls="navbar-nav-collapsible" aria-expanded="false">
+      <div
+        class="navbar-toggler"
+        role="button"
+        data-toggle="collapse"
+        data-target="#navbar-nav-collapsible"
+        aria-controls="navbar-nav-collapsible"
+        aria-expanded="false"
+      >
         <div class="burger"><span></span></div>
         <span class="sr-only">Toggle Navigation</span>
       </div>
@@ -15,35 +22,67 @@
     <div id="navbar-nav-collapsible" class="collapse navbar-collapse">
       <ul class="navbar-nav">
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCompany" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            id="navbarDropdownCompany"
+            role="button"
+            data-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
+          >
             <span>Company</span>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/company/about/">About Us</a>
-            <a class="dropdown-item" href="/company/values/">Our Values</a>
+            <a class="dropdown-item" href="/company/about/">About us</a>
+            <a class="dropdown-item" href="/company/values/">Our values</a>
             <a class="dropdown-item" href="/company/press/">Press</a>
           </div>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownWork" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            id="navbarDropdownWork"
+            role="button"
+            data-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
+          >
             <span>Work</span>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/work/services/">Our Services</a>
-            <a class="dropdown-item" href="/work/experience/">Our Experience</a>
+            <a class="dropdown-item" href="/work/services/">Our services</a>
+            <a class="dropdown-item" href="/work/experience/">Our experience</a>
             <a class="dropdown-item" href="/work/toolkits/">Toolkits</a>
           </div>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownCareers" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            id="navbarDropdownCareers"
+            role="button"
+            data-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
+          >
             <span>Careers</span>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/careers/join/">Join Us</a>
+            <a class="dropdown-item" href="/careers/join/">Join us</a>
           </div>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownThoughts" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            id="navbarDropdownThoughts"
+            role="button"
+            data-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
+          >
             <span>Thoughts</span>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -52,12 +91,22 @@
           </div>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownConnect" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            id="navbarDropdownConnect"
+            role="button"
+            data-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
+          >
             <span>Connect</span>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/connect/contact/">Contact Us</a>
-            <a class="dropdown-item" href="/connect/contracting/">Contracting</a>
+            <a class="dropdown-item" href="/connect/contact/">Contact us</a>
+            <a class="dropdown-item" href="/connect/contracting/"
+              >Contracting</a
+            >
           </div>
         </li>
       </ul>
