--- a/_includes/hire_us_cta.html
+++ b/_includes/hire_us_cta.html
@@ -3,6 +3,6 @@
   text = "However bold the idea or complex the problem, we work with you to deliver results in weeks, not years."
   text_css_class = "page-subfooter-text-col"
   cta_path = "/connect/contact/"
-  cta = "Contact Us"
+  cta = "Contact us"
   icon_css_class = "fa fa-chevron-right"
 %}
