--- a/_includes/join_us_cta.html
+++ b/_includes/join_us_cta.html
@@ -3,6 +3,6 @@
   text = "We need great technologists, designers, and more to work on changing how the government serves the public."
   text_css_class = "page-subfooter-text-col"
   cta_path = "/careers/join/"
-  cta = "Join Us"
+  cta = "Join us"
   icon_css_class = "fa fa-chevron-right"
 %}
