update font sizes

--- a/_sass/bootstrap/_buttons.scss
+++ b/_sass/bootstrap/_buttons.scss
@@ -174,7 +174,7 @@ fieldset[disabled] a.btn {
   @include button-size(
     $btn-padding-y-lg,
     $btn-padding-x-lg,
-    $font-size-lg,
+    $font-size-medium,
     $btn-border-radius-lg
   );
 }
