--- a/_sass/pages/_join.scss
+++ b/_sass/pages/_join.scss
@@ -5,11 +5,9 @@
   }
 
   h3 {
-    font-size: $font-size-small;
-    letter-spacing: 0.05em;
+    font-size: $font-size-medium;
     line-height: 1.375;
     margin-top: 1.5em;
-    text-transform: uppercase;
   }
 
   h2,
