--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -147,12 +147,13 @@
 
 .dropdown-menu {
   border: none;
-  border-radius: 0 0.25rem 0.25rem 0.25rem;
+  border-radius: 0.25rem;
   font-size: $font-size-small;
   margin-top: 0;
 
   @include media-breakpoint-up(sm) {
-    // border: 1px solid #d2aa56;
+    border: 1px solid $gray-lightest;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
     margin-top: -1px;
     min-width: 9rem;
     z-index: 1;
