--- a/_includes/testimonial_cta.html
+++ b/_includes/testimonial_cta.html
@@ -4,10 +4,12 @@
       <div class="testimonial-col">
         <blockquote>
           <p class="testimonial-quote">
-            You’d be hard pressed to find a greater assemblage of digital
-            talent.
+            “You’d be hard pressed to find a greater assemblage of digital
+            talent.”
           </p>
-
+          <div class="d-flex justify-content-center my-4">
+            <div class="page-subfooter__divider"></div>
+          </div>
           <cite class="testimonial-cite">
             <span class="testimonial-author">Luke McCormack</span>
             <span class="testimonial-position"
