update btn styles

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -35,6 +35,7 @@ $ochre-80: #f6d17d;
 $ochre-100: #f4c55c;
 $ochre-200: #e99821;
 
+$gray-1: #f8f8f8;
 $gray-20: #ddddde;
 $gray-40: #bbbbbd;
 $gray-60: #989a9c;
