--- a/_sass/_sidenav.scss
+++ b/_sass/_sidenav.scss
@@ -13,46 +13,26 @@
 
   li {
     @extend %nav-item;
-    border-top: 1px solid #e6e6e6;
     line-height: 1.3;
-
-    &:last-child {
-      border-bottom: 1px solid #e6e6e6;
-    }
 
     &:hover,
     &:focus {
       a {
         position: relative;
-
-        &:after {
-          position: absolute;
-          top: 0;
-          bottom: 0;
-          left: 0;
-          border-left: 4px solid $nav-link-border-color;
-          content: "";
-        }
       }
     }
 
     .active,
     .current {
+      color: $brand-primary;
+      font-weight: bold;
       position: relative;
-
-      &:after {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        border-left: 4px solid $nav-link-border-color;
-        content: "";
-      }
     }
   }
 
   a {
-    @extend %nav-link-decoration;
+    color: $gray-light;
+    font-family: $font-family-mono;
     font-size: $font-size-small;
     border: none;
   }
