--- a/_sass/pages/_project.scss
+++ b/_sass/pages/_project.scss
@@ -23,8 +23,8 @@
 .project-case-study-title-tag {
   @extend %text-uppercase;
   color: $gray-light;
-  font-weight: 700;
-  letter-spacing: 0.5px;
+  font-family: $font-family-mono;
+  margin-bottom: 0.7rem;
   text-align: left;
 }
 
