--- a/_sass/pages/_about.scss
+++ b/_sass/pages/_about.scss
@@ -26,15 +26,17 @@
   @extend %row;
 }
 
-.employee-img {
-  filter: grayscale(1);
-}
+@include semantic-card(
+  "employee",
+  $clickable: false,
+  $title-alignment: center,
+  $title-color: $body-color,
+  $subtitle-color: $text-muted,
+  $footer-border-off: false,
+  $card-img-height: 275px
+);
 
-@include semantic-card('employee', $clickable: false, $title-alignment: center,
-  $title-color: $body-color, $subtitle-color: $text-muted, $footer-border-off: false,
-  $card-img-height: 275px);
-
-@include multi-col-spacing('employee-col', $mb-size: 4, $mb-md-size: 5);
+@include multi-col-spacing("employee-col", $mb-size: 4, $mb-md-size: 5);
 
 .employee-footer {
   font-size: $font-size-large;
