--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -122,7 +122,6 @@ h1 {
     @extend %list-unstyled;
 
     li::before {
-      color: $gray-light;
       position: absolute;
       left: 0;
       top: 0;
@@ -132,7 +131,7 @@ h1 {
   ul {
     li::before {
       @extend %rounded-circle;
-      content: "\2022";
+      content: "-";
       position: absolute;
     }
 
