--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
   {% include head.html %}
 
-  <body class="page-{% if page.class %}{{ page.class }}{% else %}{{ page.title | slugify }}{% endif %} page-{{ page.permalink | slugify }}" data-spy="scroll" data-target="#sidenav">
+  <body class="page-{% if page.class %}{{ page.class }}{% else %}{{ page.title | slugify }}{% endif %} page-{{ page.permalink | slugify }}" data-spy="scroll" data-target="#sidenav" data-offset="10">
     <a href="#content" class="sr-only sr-only-focusable">Skip to Main Content</a>
 
     {% include header.html %}
