update share buttons

--- a/_includes/post.html
+++ b/_includes/post.html
@@ -53,15 +53,15 @@
 
           <div>
             <a href="{{tweet_url}}" role="button">
-              <i class="fa fa-twitter" aria-hidden="true" title="Twitter"></i>
-              Share on Twitter
+              <i class="fa fa-twitter" aria-hidden="true" title="Twitter"></i
+                >Share on Twitter
             </a>
           </div>
 
           <div>
             <a href="{{linkedin_url}}" role="button">
-              <i class="fa fa-linkedin" aria-hidden="true" title="LinkedIn"></i>
-              Share on LinkedIn
+              <i class="fa fa-linkedin" aria-hidden="true" title="LinkedIn"></i
+                >Share on LinkedIn
             </a>
           </div>
         </div>
