--- a/_sass/_accordion.scss
+++ b/_sass/_accordion.scss
@@ -1,30 +1,50 @@
 .accordion-header {
   a {
-    background-color: $brand-primary;
-    border-bottom: none !important;
+    background-image: url(../img/icons/chevron-down.svg),
+      linear-gradient(transparent, transparent);
+    background-repeat: no-repeat;
+    background-position: right 1.25rem center;
+    background-size: 1rem;
+    border-bottom: 1px solid $black;
     display: block;
-    padding: $card-spacer-y $card-spacer-x;
+    padding: 1em;
 
-    @include border-radius($card-border-radius-inner $card-border-radius-inner 0 0);
+    &:hover,
+    &:focus {
+      color: $brand-primary;
 
-    &:hover {
-      background-color: darken($brand-primary, 10%);
+      h3 {
+        font-weight: bold;
+      }
     }
 
     &.collapsed {
-      @include border-radius($card-border-radius-inner $card-border-radius-inner);
+      @include border-radius(
+        $card-border-radius-inner $card-border-radius-inner
+      );
+    }
+
+    &[aria-expanded="true"] {
+      background-image: url(../img/icons/chevron-up.svg),
+        linear-gradient(transparent, transparent);
+
+      h3 {
+        font-weight: bold;
+      }
     }
   }
 
-  h3, h2 {
+  h3,
+  h2 {
     display: flex;
+    font-family: $font-family-mono;
     font-size: $font-size-h6;
-    font-weight: 700;
+    font-weight: normal;
     justify-content: space-between;
     align-content: stretch;
     border-bottom: none !important;
     margin-bottom: 0 !important;
-    color: $white;
+    // color: $white;
     position: relative;
 
     > div:first-child {
@@ -52,14 +72,13 @@
 }
 
 .accordion-card {
-  margin-bottom: 16px;
-  border-radius: .25rem;
   border: none;
 }
 
 .accordion-card-body {
   padding: 20px;
-  border: 1px solid $brand-primary;
+  border-bottom: 1px solid $brand-primary;
+  font-family: $font-family-mono;
 
   p + p {
     margin-top: 1em;
@@ -102,4 +121,3 @@
 .can-touch .accordion-filter .accordion-header a:hover {
   background-color: $gray-lightest;
 }
-
