use dashed link style

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -180,8 +180,8 @@ $brand-primary-muted: rgba($brand-primary, 0.7);
 // Links
 $text-link-color: $link-color;
 $text-link-hover-color: $link-hover-color;
-$text-link-border: 1px dotted $link-color;
-$text-link-border-hover: 1px dotted $link-hover-color;
+$text-link-border: 1px dashed $link-color;
+$text-link-border-hover: 1px dashed $link-hover-color;
 
 $header-display: $font-size-display;
 $header-display-1: $font-size-h1;
