update all links to dashed

--- a/_sass/pages/_project.scss
+++ b/_sass/pages/_project.scss
@@ -44,7 +44,7 @@
   @extend %text-left;
   @extend %mt-4;
   @extend %p-3;
-  border: 1px dotted $gray-lightest;
+  border: 1px dashed $gray-lightest;
 
   h3,
   ul {
