--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -225,7 +225,7 @@ $control-label-font-size: $font-size-base;
 
 $help-text-link-color: $text-muted;
 $help-text-link-hover-color: $brand-primary;
-$help-text-link-border: 1px dotted $help-text-link-color;
+$help-text-link-border: 1px dashed $help-text-link-color;
 $help-text-link-border-hover: 1px solid $help-text-link-hover-color;
 
 $form-icons-margin-bottom: $form-group-margin-bottom;
@@ -267,7 +267,7 @@ $btn-page-cta-bg: $brand-primary;
 // Project case studies
 $project-aside-link-color: $brand-primary;
 $project-aside-link-hover-color: $link-hover-color;
-$project-aside-link-border: 1px dotted $project-aside-link-color;
+$project-aside-link-border: 1px dashed $project-aside-link-color;
 $project-aside-link-border-hover: 1px solid $project-aside-link-hover-color;
 
 // Filters
@@ -281,7 +281,7 @@ $post-header-footer-color: $gray-light;
 
 $post-header-footer-link-color: $brand-primary;
 $post-header-footer-link-hover-color: $link-hover-color;
-$post-header-footer-link-border: 1px dotted $post-header-footer-link-color;
+$post-header-footer-link-border: 1px dashed $post-header-footer-link-color;
 $post-header-footer-link-border-hover: 1px solid
   $post-header-footer-link-hover-color;
 
