--- a/_sass/bootstrap/_normalize.scss
+++ b/_sass/bootstrap/_normalize.scss
@@ -61,7 +61,8 @@ h1 {
 
 figcaption,
 figure,
-main { // 1
+main {
+  // 1
   display: block;
 }
 
@@ -125,7 +126,7 @@ a:hover {
 abbr[title] {
   border-bottom: none; // 1
   text-decoration: underline; // 2
-  text-decoration: underline dotted; // 2
+  text-decoration: underline dashed; // 2
 }
 
 //
@@ -266,7 +267,8 @@ textarea {
 //
 
 button,
-input { // 1
+input {
+  // 1
   overflow: visible;
 }
 
@@ -276,7 +278,8 @@ input { // 1
 //
 
 button,
-select { // 1
+select {
+  // 1
   text-transform: none;
 }
 
@@ -313,7 +316,7 @@ button:-moz-focusring,
 [type="button"]:-moz-focusring,
 [type="reset"]:-moz-focusring,
 [type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText;
+  outline: 1px dashed ButtonText;
 }
 
 //
