--- a/_sass/bootstrap/_reboot.scss
+++ b/_sass/bootstrap/_reboot.scss
@@ -5,7 +5,6 @@
 // Global resets to common HTML elements and more for easier usage by Bootstrap.
 // Adds additional rules on top of Normalize.css, including several overrides.
 
-
 // Reset the box-sizing
 //
 // Change from `box-sizing: content-box` to `border-box` so that when you add
@@ -29,7 +28,6 @@ html {
   box-sizing: inherit;
 }
 
-
 // Make viewport responsive
 //
 // @viewport is needed because IE 10+ doesn't honor <meta name="viewport"> in
@@ -46,9 +44,10 @@ html {
 // Wrap `@viewport` with `@at-root` for when folks do a nested import (e.g.,
 // `.class-name { @import "bootstrap"; }`).
 @at-root {
-  @-ms-viewport { width: device-width; }
+  @-ms-viewport {
+    width: device-width;
+  }
 }
-
 
 //
 // Reset HTML, body, and more
@@ -69,7 +68,7 @@ html {
   -ms-overflow-style: scrollbar;
 
   // Changes the default tap highlight to be completely transparent in iOS.
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 body {
@@ -92,7 +91,6 @@ body {
   outline: none !important;
 }
 
-
 //
 // Typography
 //
@@ -101,9 +99,14 @@ body {
 //
 // By default, `<h1>`-`<h6>` all receive top and bottom margins. We nuke the top
 // margin for easier control within type scales as it avoids margin collapsing.
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin-top: 0;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 // Reset margins on paragraphs
@@ -147,14 +150,13 @@ dt {
 }
 
 dd {
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
   margin-left: 0; // Undo browser default
 }
 
 blockquote {
   margin: 0 0 1rem;
 }
-
 
 //
 // Links
@@ -190,7 +192,6 @@ a:not([href]):not([tabindex]) {
   }
 }
 
-
 //
 // Code
 //
@@ -204,7 +205,6 @@ pre {
   overflow: auto;
 }
 
-
 //
 // Figures
 //
@@ -214,7 +214,6 @@ figure {
   // We reset that to create a better flow in-page.
   margin: 0 0 1rem;
 }
-
 
 //
 // Images
@@ -228,7 +227,6 @@ img {
   // For the rationale behind this, see the comments on the `.img-fluid` class.
 }
 
-
 // iOS "clickable elements" fix for role="button"
 //
 // Fixes "clickability" issue (and more generally, the firing of events such as focus as well)
@@ -238,7 +236,6 @@ img {
 [role="button"] {
   cursor: pointer;
 }
-
 
 // Avoid 300ms click delay on touch devices that support the `touch-action` CSS property.
 //
@@ -261,7 +258,6 @@ summary,
 textarea {
   touch-action: manipulation;
 }
-
 
 //
 // Tables
@@ -287,7 +283,6 @@ th {
   text-align: left;
 }
 
-
 //
 // Forms
 //
@@ -295,7 +290,7 @@ th {
 label {
   // Allow labels to use `margin` for spacing.
   display: inline-block;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 // Work around a Firefox/IE bug where the transparent `button` background
@@ -303,7 +298,7 @@ label {
 //
 // Credit: https://github.com/suitcss/base/
 button:focus {
-  outline: 1px dotted;
+  outline: 1px dashed;
   outline: 5px auto -webkit-focus-ring-color;
 }
 
@@ -325,7 +320,6 @@ input[type="checkbox"] {
     cursor: $cursor-disabled;
   }
 }
-
 
 input[type="date"],
 input[type="time"],
@@ -362,7 +356,7 @@ legend {
   display: block;
   width: 100%;
   padding: 0;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
   font-size: 1.5rem;
   line-height: inherit;
 }
@@ -378,9 +372,9 @@ input[type="search"] {
 // todo: needed?
 output {
   display: inline-block;
-//  font-size: $font-size-base;
-//  line-height: $line-height;
-//  color: $input-color;
+  //  font-size: $font-size-base;
+  //  line-height: $line-height;
+  //  color: $input-color;
 }
 
 // Always hide an element with the `hidden` HTML attribute (from PureCSS).
