--- a/_sass/bootstrap/_type.scss
+++ b/_sass/bootstrap/_type.scss
@@ -2,8 +2,18 @@
 // Headings
 //
 
-h1, h2, h3, h4, h5, h6,
-.h1, .h2, .h3, .h4, .h5, .h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
   margin-bottom: $headings-margin-bottom;
   font-family: $headings-font-family;
   font-weight: $headings-font-weight;
@@ -11,12 +21,30 @@ h1, h2, h3, h4, h5, h6,
   color: $headings-color;
 }
 
-h1, .h1 { font-size: $font-size-h1; }
-h2, .h2 { font-size: $font-size-h2; }
-h3, .h3 { font-size: $font-size-h3; }
-h4, .h4 { font-size: $font-size-h4; }
-h5, .h5 { font-size: $font-size-h5; }
-h6, .h6 { font-size: $font-size-h6; }
+h1,
+.h1 {
+  font-size: $font-size-h1;
+}
+h2,
+.h2 {
+  font-size: $font-size-h2;
+}
+h3,
+.h3 {
+  font-size: $font-size-h3;
+}
+h4,
+.h4 {
+  font-size: $font-size-h4;
+}
+h5,
+.h5 {
+  font-size: $font-size-h5;
+}
+h6,
+.h6 {
+  font-size: $font-size-h6;
+}
 
 .lead {
   font-size: $lead-font-size;
@@ -45,7 +73,6 @@ h6, .h6 { font-size: $font-size-h6; }
   line-height: $display-line-height;
 }
 
-
 //
 // Horizontal rules
 //
@@ -56,7 +83,6 @@ hr {
   border: 0;
   border-top: $hr-border-width solid $hr-border-color;
 }
-
 
 //
 // Emphasis
@@ -73,7 +99,6 @@ mark,
   padding: $mark-padding;
   background-color: $mark-bg;
 }
-
 
 //
 // Lists
@@ -96,7 +121,6 @@ mark,
   }
 }
 
-
 //
 // Misc
 //
@@ -109,10 +133,24 @@ mark,
 
 // Blockquotes
 .blockquote {
-  padding: ($spacer / 2) $spacer;
-  margin-bottom: $spacer;
+  background-color: $brand-primary;
+  color: $white;
   font-size: $blockquote-font-size;
-  border-left: $blockquote-border-width solid $blockquote-border-color;
+  font-weight: $font-weight-bold;
+  line-height: 1.5;
+  margin-bottom: $spacer;
+  padding: 2rem 3rem 2rem 7.4rem;
+  position: relative;
+
+  &::before {
+    content: open-quote;
+    font-size: 170px;
+    top: 18px;
+    line-height: 1;
+    left: 1.5rem;
+    opacity: 20%;
+    position: absolute;
+  }
 }
 
 .blockquote-footer {
