update sidenav sizes

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -53,18 +53,18 @@ $sk-yellow: darken($ochre-100, 0%);
 $sk-grey: $gray-100;
 
 // Font sizes
-$font-size-xxxxx-large: 3rem; // 48px
-$font-size-xxxx-large: 2.5rem; // 40
-$font-size-xxx-large: 2rem; // 32
-$font-size-xx-large: 1.75rem; //
-$font-size-x-large: 1.5rem; //
-$font-size-large: 1.25rem; //
-$font-size-medium: 1.125rem; //
-$font-size-small: 1rem; //
-$font-size-x-small: 0.95rem; //
-$font-size-xx-small: 0.9rem; //
-$font-size-xxx-small: 0.85rem; //
-$font-size-xxxx-small: 0.8rem; //
+$font-size-xxxxx-large: 3rem;    // 48px
+$font-size-xxxx-large: 2.5rem;   // 40px
+$font-size-xxx-large: 2rem;      // 32px
+$font-size-xx-large: 1.75rem;    // 28px
+$font-size-x-large: 1.5rem;      // 24px
+$font-size-large: 1.25rem;       // 20px
+$font-size-medium: 1.125rem;     // 18px
+$font-size-small: 1rem;          // 16px
+$font-size-x-small: 0.9375rem;   // 15px
+$font-size-xx-small: 0.875rem;   // 14px
+$font-size-xxx-small: 0.8125rem; // 13px
+$font-size-xxxx-small: 0.75rem;  // 12px
 
 // Bootstrap overrides
 //
