--- a/_sass/_sidenav.scss
+++ b/_sass/_sidenav.scss
@@ -33,7 +33,7 @@
   a {
     color: $gray-light;
     font-family: $font-family-mono;
-    font-size: $font-size-small;
+    font-size: $font-size-x-small;
     border: none;
   }
 }
