Add news coverage

--- a/_includes/project.html
+++ b/_includes/project.html
@@ -98,20 +98,22 @@
         used' accordion_body = accordion_body accordion_index = '2' %}
 
         <h2>The results</h2>
-        {{include.results}} {% if page.news_posts %} {% capture accordion_body
-        %}
-        <aside class="news-coverage">
-          <ul>
-            {% for post in page.news_posts %}
-            <li>
-              <a href="{{post.url}}">{{post.title}}</a>
-            </li>
-            {% endfor %}
-          </ul>
-        </aside>
-        {% endcapture %} {% include accordion.html accordion_header = 'News
-        coverage' accordion_body = accordion_body accordion_index = '3' %} {%
-        endif %}
+        {{include.results}}
+        {% if page.news_posts %}
+          {% capture news_body%}
+            <aside class="news-coverage callout">
+              <h2>News coverage</h2>
+              <ul>
+                {% for post in page.news_posts %}
+                <li>
+                  <a href="{{post.url}}">{{post.title}}</a>
+                </li>
+                {% endfor %}
+              </ul>
+            </aside>
+          {% endcapture %}
+          {{ news_body }}
+        {% endif %}
       </div>
 
       {% if page.project_url or page.source_code_url %}
