update values and badge

--- a/_sass/pages/_contracting.scss
+++ b/_sass/pages/_contracting.scss
@@ -6,7 +6,9 @@
 }
 
 .badge-sub {
-  background-color: $gray-light;
+  background-color: $ochre-40;
+  color: $black;
+  font-weight: normal;
   letter-spacing: 0.025em;
   text-transform: uppercase;
 }
