update talks design, use FA kit

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -238,7 +238,7 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
 
-  <link rel="stylesheet" href="/css/font-awesome.min.css" type="text/css">
+  <script src="https://kit.fontawesome.com/9942b8e4b9.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}?{{site.time | date: '%s%N'}}" type="text/css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link
