--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -223,3 +223,11 @@ h1 {
 .maxw-prose {
   max-width: $prose-max-width;
 }
+
+.font-lg {
+  font-size: $font-size-large;
+}
+
+.font-md {
+  font-size: $font-size-medium;
+}
