update heading colors

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -95,6 +95,7 @@ $brand-gray-light: $gray-20;
 
 // Body
 $body-color: $gray-200;
+$heading-color: $gray-300;
 
 // Links
 $link-color: $brand-primary;
