--- a/_sass/pages/_filter.scss
+++ b/_sass/pages/_filter.scss
@@ -22,40 +22,15 @@
   @extend %d-flex;
   @extend %justify-content-start;
   @extend %pb-4;
-  border-bottom: 1px solid $gray-lightest;
 
   .employee-gradient {
-    width: 3rem;
-
-    &::after {
-      height: 3rem;
-      width: 3rem;
-    }
-  }
-
-  @include media-breakpoint-up(md) {
-    .employee-gradient {
-      width: 4rem;
-
-      &::after {
-        height: 4rem;
-        width: 4rem;
-      }
-    }
+    width: 5rem;
   }
 }
 
 .filter-image {
   @extend %rounded-circle;
-  box-shadow: 0 0 0 2px $white, 0 0 0 3px $gray-lightest;
-  height: 3rem;
-  margin-left: 3px;
-
-  @include media-breakpoint-up(md) {
-    box-shadow: 0 0 0 6px $white, 0 0 0 7px $gray-lightest;
-    height: 4rem;
-    margin-left: 7px;
-  }
+  height: 5rem;
 }
 
 .filter-header-rect {
@@ -119,14 +94,16 @@
   @extend %mb-0;
   @extend %text-uppercase;
   @extend %text-muted;
+  font-family: $font-family-mono;
   font-size: $font-size-xxx-small;
+  font-weight: normal;
 }
 
 .filter-count {
   @extend %ml-auto;
   @extend %text-muted;
-  @extend %font-italic;
-  font-size: $font-size-xx-small;
+  font-family: $font-family-mono;
+  font-size: $font-size-small;
 }
 
 @include media-breakpoint-up(md) {
@@ -140,10 +117,6 @@
 
   .filter-subtitle {
     font-size: $font-size-small;
-  }
-
-  .filter-count {
-    font-size: $font-size-medium;
   }
 
   .filter-item-description {
